tests/ui/consts/min_const_fn/address_of.stderr
error[E0658]: raw mutable references are not allowed in constant functions
  --> $DIR/address_of.rs:5:13
   |
LL |     let b = &raw mut a;
   |             ^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/crablang/crablang/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0658]: raw mutable references are not allowed in constant functions
  --> $DIR/address_of.rs:13:17
   |
LL |         let b = &raw mut a;
   |                 ^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/crablang/crablang/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0658`.
